policies/standard/pod_security_runasgroup/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodsecurityrunasgrouppolicy
  annotations:
    description: >-
      RunAsGroup should be set to integer greater than 0
spec:
  crd:
    spec:
      names:
        kind: K8sPodSecurityRunasgroupPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodsecurityrunasgrouppolicy

        violation[{"msg": msg}] {
          c := input_containers[_]
          not input_run_as_valid_group(c)
          msg := sprintf("RunAsGroup must be grater than 0: %v", [c.name])
        }

        input_run_as_valid_group(c) {
          c.securityContext.runAsGroup > 0
        }
        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.initContainers[_]
        }
